--- a/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
@@ -76,6 +76,9 @@
 
                 </select>
             </div>
+            <div class="col">
+                <button class="btn btn-info" onclick="raporGoster()">RAPOR</button>
+            </div>
         </div>
         <div class="row mt-3">
             <div class="col-md-12">
@@ -6174,7 +6177,7 @@
             </div>
         </div>
     </div>
-    <div id="con2" class="container-xxl" style="z-index:5">
+    <div id="con2" class="container-xxl mt-2" style="z-index:5">
         <div id="employeeTableWrapper" class="tableWrapper table-responsive">
             <table id="table"
                    class="table table-striped"
@@ -6275,6 +6278,10 @@
     <!-- Page JS -->
     <script type="text/javascript" src="/assets/js/dashboards-analytics.js"></script>
     <script type="text/javascript">
+        function raporGoster() {
+            $('#con1').hide();
+            $('#con2').show();
+        }
         if ($(window).width() < 600) {
             $("#divPartial2").show();
             document.getElementById("ik").className = "menu-item open active";
