--- a/NOVA/Views/Shared/_Layout_anasayfa.cshtml
+++ b/NOVA/Views/Shared/_Layout_anasayfa.cshtml
@@ -20,14 +20,8 @@
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
 
-    
-
-
-
-
     @Styles.Render("~/Content/test")
     @Scripts.Render("~/bundles/config")
-
 
     <style>
         .btn-grad {
@@ -75,9 +69,11 @@
                     <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
 
                         <!-- beterbocekler.tr.gg Widget Başlangıcı --> <div class="tradingview-widget-container">
-                                                                                                                 
 
-                         <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
+    @{
+        if (Request.Cookies["RoleName"].Value != "uretim4")
+        {
+            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
   {
   "symbols": [
     {
@@ -108,8 +104,11 @@
   "locale": "tr"
 }
 
-                            </script>
-                        </div> <!-- beterbocekler.tr.gg Widget sonu -->
+            </script>
+        }
+    }
+
+</div> <!-- beterbocekler.tr.gg Widget sonu -->
                        
                     </div>
                 </nav>
