--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -456,38 +456,37 @@
                                    data-click-to-select="true"
                                    data-minimum-count-columns="2"
                                    data-show-pagination-switch="false"
-                                   data-pagination="false"
                                    data-id-field="id"
                                    data-show-footer="false"
                                    data-mobile-responsive="true"
                                    data-row-style="rowFormatter"
                                    data-pagination-parts="['pageSize', 'pageInfo', 'pageList']"
                                    data-locale="tr-TR"
-                                   data-sticky-header="true">
+                                   data-sticky-header="false">
                                 <thead>
                                     <tr>
                                         <th data-field="TARIH" data-halign="center" data-align="center" data-sortable="true">TARİH</th>
-                                        <th data-field="HAM_SERINO" data-halign="center" data-align="center" data-sortable="true">HAM SERINO</th>
+                                        <th data-field="HAM_SERINO" data-halign="center" data-align="center" data-sortable="true">HAMMADDE BARKOD NO</th>
                                         <th data-field="HAM_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">HAM STOK KODU</th>
-                                        <th data-field="HAM_ADI" data-halign="center" data-align="center" data-sortable="true">HAM ADI</th>
-                                        <th data-field="HAM_DETAY" data-width="150" data-halign="center" data-align="center" data-sortable="true">HAM DETAY</th>
-                                        <th data-field="HAM_GENISLIK" data-halign="center" data-align="center" data-sortable="true">HAM GENISLIK</th>
-                                        <th data-field="HAM_KALINLIK" data-halign="center" data-align="center" data-sortable="true">HAM KALINLIK</th>
-                                        <th data-field="HAM_FIRMA_SERI" data-halign="center" data-align="center" data-sortable="true">HAM FIRMA SERI</th>
+                                        <th data-field="HAM_ADI" data-halign="center" data-align="center" data-sortable="true">HAMMADE STOK ADI</th>
+                                        <th data-field="HAM_DETAY" data-width="150" data-halign="center" data-align="center" data-sortable="true">HAMMADE DETAY</th>
+                                        <th data-field="HAM_GENISLIK" data-halign="center" data-align="center" data-sortable="true">HAMMADE GENISLIK</th>
+                                        <th data-field="HAM_KALINLIK" data-halign="center" data-align="center" data-sortable="true">HAMMADE KALINLIK</th>
+                                        <th data-field="HAM_FIRMA_SERI" data-halign="center" data-align="center" data-sortable="true">HAMMADE FIRMA SERI</th>
                                         <th data-field="ACIKLAMA_4" data-halign="center" data-align="center" data-sortable="true">ACIKLAMA 4</th>
                                         <th data-field="ACIKLAMA_5" data-halign="center" data-align="center" data-sortable="true">ACIKLAMA 5</th>
-                                        <th data-field="HAM_KALITE" data-halign="center" data-align="center" data-sortable="true">HAM KALITE</th>
-                                        <th data-field="HAM_KAP_KALINLIK" data-halign="center" data-align="center" data-sortable="true">HAM KAP KALINLIK</th>
-                                        <th data-field="HAM_MIKTAR" data-halign="center" data-align="center" data-sortable="true">HAM MIKTAR</th>
+                                        <th data-field="HAM_KALITE" data-halign="center" data-align="center" data-sortable="true">HAMMADE KALITE</th>
+                                        <th data-field="HAM_KAP_KALINLIK" data-halign="center" data-align="center" data-sortable="true">HAMMADE KAP KALINLIK</th>
+                                        <th data-field="HAM_MIKTAR" data-halign="center" data-align="center" data-sortable="true">HAMMADE MIKTAR</th>
                                         <th data-field="USTISEMRI" data-halign="center" data-align="center" data-sortable="true">USTISEMRI</th>
                                         <th data-field="ALT_ISEMRI" data-halign="center" data-align="center" data-sortable="true">ALT ISEMRI</th>
                                         <th data-field="SIRA" data-halign="center" data-align="center" data-sortable="true">SIRA</th>
                                         <th data-field="URT_SERINO" data-halign="center" data-align="center" data-sortable="true">URT SERINO</th>
                                         <th data-field="URT_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">URT STOK KODU</th>
-                                        <th data-field="URT_STOK_ADI" data-halign="center" data-align="center" data-sortable="true">URT STOK ADI</th>
+                                        <th data-field="URT_STOK_ADI" data-halign="center" data-align="center" data-sortable="true">STOK ADI</th>
                                         <th data-field="URT_GENISLIK" data-halign="center" data-align="center" data-sortable="true">URT GENISLIK</th>
-                                        <th data-field="IE_MIKTAR2" data-halign="center" data-align="center" data-sortable="true" data-formatter="MiktarFormatter">IE MIKTAR2</th>
-                                        <th data-field="IE_MIKTAR" data-halign="center" data-align="center" data-sortable="true" data-formatter="MiktarFormatter">IE MIKTAR</th>
+                                        <th data-field="IE_MIKTAR2" data-halign="center" data-align="center" data-sortable="true" data-formatter="MiktarFormatter">MİKTAR 2</th>
+                                        <th data-field="IE_MIKTAR" data-halign="center" data-align="center" data-sortable="true" data-formatter="MiktarFormatter">MİKTAR 1</th>
                                         <th data-field="REFISEMRINO" data-halign="center" data-align="center" data-sortable="true">REFISEMRINO</th>
                                         <th data-field="REF_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">REF_STOK_KODU</th>
                                         <th data-field="REF_STOK_ADI" data-halign="center" data-align="center" data-sortable="true">REF_STOK_ADI</th>
@@ -779,11 +778,11 @@
                                         <th data-field="USTISEMRI" data-halign="center" data-align="center" data-sortable="true">USTISEMRI</th>
                                         <th data-field="ALT_ISEMRI" data-halign="center" data-align="center" data-sortable="true">ALT ISEMRI</th>
                                         <th data-field="URT_SERINO" data-halign="center" data-align="center" data-sortable="true">URT SERINO</th>
-                                        <th data-field="URT_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">URT STOK KODU</th>
-                                        <th data-field="URT_STOK_ADI" data-halign="center" data-align="center" data-sortable="true">URT STOK_ADI</th>
-                                        <th data-field="URT_GENISLIK" data-halign="center" data-align="center" data-sortable="true">URT GENISLIK</th>
-                                        <th data-field="IE_MIKTAR2" data-halign="center" data-align="center" data-sortable="true" data-formatter="MiktarFormatter">IE MIKTAR2</th>
-                                        <th data-field="IE_MIKTAR" data-halign="center" data-align="center" data-sortable="true" data-formatter="MiktarFormatter">IE MIKTAR</th>
+                                        <th data-field="URT_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">STOK KODU</th>
+                                        <th data-field="URT_STOK_ADI" data-halign="center" data-align="center" data-sortable="true">STOK ADI</th>
+                                        <th data-field="URT_GENISLIK" data-halign="center" data-align="center" data-sortable="true">GENİŞLİK</th>
+                                        <th data-field="IE_MIKTAR2" data-halign="center" data-align="center" data-sortable="true" data-formatter="MiktarFormatter">MİKTAR 2</th>
+                                        <th data-field="IE_MIKTAR" data-halign="center" data-align="center" data-sortable="true" data-formatter="MiktarFormatter">MİKTAR 1</th>
                                         <th data-field="REFISEMRINO" data-halign="center" data-align="center" data-sortable="true">REFISEMRINO</th>
                                         <th data-field="REF_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">REF STOK KODU</th>
                                         <th data-field="REF_STOK_ADI" data-halign="center" data-align="center" data-sortable="true">REF STOK ADI</th>
@@ -867,14 +866,14 @@
                 case "DL01":
                     $('#BekleyenIsEmirleriTable').bootstrapTable('showColumn', 'TARIH');
                     $('#BekleyenIsEmirleriTable').bootstrapTable('showColumn', 'HAM_SERINO');
-                    $('#BekleyenIsEmirleriTable').bootstrapTable('showColumn', 'HAM_STOK_KODU');
+                    $('#BekleyenIsEmirleriTable').bootstrapTable('hideColumn', 'HAM_STOK_KODU');
                     $('#BekleyenIsEmirleriTable').bootstrapTable('showColumn', 'HAM_ADI');
                     $('#BekleyenIsEmirleriTable').bootstrapTable('showColumn', 'HAM_DETAY');
                     $('#BekleyenIsEmirleriTable').bootstrapTable('showColumn', 'HAM_GENISLIK');
                     $('#BekleyenIsEmirleriTable').bootstrapTable('showColumn', 'HAM_KALINLIK');
                     $('#BekleyenIsEmirleriTable').bootstrapTable('showColumn', 'HAM_FIRMA_SERI');
-                    $('#BekleyenIsEmirleriTable').bootstrapTable('showColumn', 'ACIKLAMA_4');
-                    $('#BekleyenIsEmirleriTable').bootstrapTable('showColumn', 'ACIKLAMA_5');
+                    $('#BekleyenIsEmirleriTable').bootstrapTable('hideColumn', 'ACIKLAMA_4');
+                    $('#BekleyenIsEmirleriTable').bootstrapTable('hideColumn', 'ACIKLAMA_5');
                     $('#BekleyenIsEmirleriTable').bootstrapTable('showColumn', 'HAM_KALITE');
                     $('#BekleyenIsEmirleriTable').bootstrapTable('showColumn', 'HAM_KAP_KALINLIK');
                     $('#BekleyenIsEmirleriTable').bootstrapTable('showColumn', 'HAM_MIKTAR');
@@ -919,7 +918,7 @@
                     $('#BekleyenIsEmirleriTable').bootstrapTable('hideColumn', 'ALT_ISEMRI');
                     $('#BekleyenIsEmirleriTable').bootstrapTable('hideColumn', 'SIRA');
                     $('#BekleyenIsEmirleriTable').bootstrapTable('hideColumn', 'URT_SERINO');
-                    $('#BekleyenIsEmirleriTable').bootstrapTable('showColumn', 'URT_STOK_KODU');
+                    $('#BekleyenIsEmirleriTable').bootstrapTable('hideColumn', 'URT_STOK_KODU');
                     $('#BekleyenIsEmirleriTable').bootstrapTable('showColumn', 'URT_STOK_ADI');
                     $('#BekleyenIsEmirleriTable').bootstrapTable('hideColumn', 'URT_GENISLIK');
                     $('#BekleyenIsEmirleriTable').bootstrapTable('showColumn', 'IE_MIKTAR');
