İş emri UretimSonuKaydı referans null değilse eklendi

--- a/NOVA/Views/IsEmri/IsEmri.cshtml
+++ b/NOVA/Views/IsEmri/IsEmri.cshtml
@@ -2289,7 +2289,7 @@
             $("#RFPivot").hide();
             $("#RFPivotTop").hide();
             $("#tamamidiv").show();
-            $("#tamami").prop("checked", false);
+            $("#tamami").prop("checked", true);
             if ($("#seri").val() != null && $("#seri").val()!="") {
 
                 MachineChange(document.getElementById("DLTable").getElementsByTagName("tr")[1].getElementsByTagName("select")[0], "DLTable");
@@ -2331,7 +2331,7 @@
             $("#RFPivot").hide();
             $("#RFPivotTop").hide();
             $("#tamamidiv").hide();
-            $("#tamami").prop("checked", false);
+            $("#tamami").prop("checked", true);
             TPTableLoadLocalData();
         }
         else if (val.value == "BK") {
@@ -2358,7 +2358,7 @@
             $("#RFTable").hide();
             $("#RFPivot").hide();
             $("#RFPivotTop").hide();
-            $("#tamami").prop("checked", false);
+            $("#tamami").prop("checked", true);
             if (localStorage.BKPivotVeri != null && localStorage.BKPivotVeri != undefined && localStorage.BKPivotVeri != "null") {
 
                 $("#tamamidiv").show();
@@ -2391,10 +2391,12 @@
             $("#RFTable").hide();
             $("#RFPivot").hide();
             $("#RFPivotTop").hide();
-            $("#tamami").prop("checked", false);
+            $("#tamami").prop("checked", true);
             if (localStorage.PBPivotVeri != null && localStorage.PBPivotVeri != undefined && localStorage.PBPivotVeri != "null") {
 
                 $("#tamamidiv").show();
+            } else {
+                $("#tamamidiv").hide();
             }
             PBTableLoadLocalData();
         }
@@ -2422,10 +2424,12 @@
             $("#RFTable").show();
             $("#RFPivot").show();
             $("#RFPivotTop").show();
-            $("#tamami").prop("checked", false);
+            $("#tamami").prop("checked", true);
             if (localStorage.RFPivotVeri != null && localStorage.RFPivotVeri != undefined && localStorage.RFPivotVeri != "null") {
 
                 $("#tamamidiv").show();
+            } else {
+                $("#tamamidiv").hide();
             }
             RFTableLoadLocalData();
         }
