--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -1,4 +1,4 @@
-﻿﻿﻿
+﻿
 @{
     Layout = "/Views/Shared/_Layout_isemri.cshtml";
 }
@@ -456,6 +456,7 @@
                                    data-show-columns-toggle-all="false"
                                    data-detail-view="true"
                                    data-detail-view-by-click="true"
+                                   data-detail-formatter=""
                                    data-show-export="false"
                                    data-click-to-select="true"
                                    data-minimum-count-columns="2"
@@ -463,13 +464,14 @@
                                    data-id-field="id"
                                    data-show-footer="false"
                                    data-mobile-responsive="true"
+                                   data-detail-view-icon="false" 
                                    data-row-style="rowFormatter"
                                    data-pagination-parts="['pageSize', 'pageInfo', 'pageList']"
                                    data-locale="tr-TR"
                                    data-sticky-header="false">
                                 <thead>
                                     <tr>
-                                        <th data-width="0" data-field="TARIH" data-halign="center" data-align="center" data-sortable="true">TARİH</th>
+                                        <th data-width="50" data-field="TARIH" data-halign="center" data-align="center" data-sortable="true">TARİH</th>
                                         <th data-width="0" data-field="HAM_SERINO" data-halign="center" data-align="center" data-sortable="true">HAMMADDE BARKOD NO</th>
                                         <th data-width="0" data-field="HAM_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">HAM STOK KODU</th>
                                         <th data-width="0" data-field="HAM_ADI" data-halign="center" data-align="center" data-sortable="true">HAMMADE STOK ADI</th>
@@ -763,44 +765,13 @@
             });
         }
 
-        $('#BekleyenIsEmirleriTable').on('expand-row.bs.table', function (e, index, row, $detail) {
-            $detail.html(`<div class="card-body p-2" style="background-color:mintcream;"><div class="table-responsive"><table id="BekleyenIsEmirleri${index}DetailTable" class="table" data-search="false" data-show-refresh="false" data-show-toggle="false" data-show-fullscreen="false" data-show-columns="false" data-show-columns-toggle-all="false" data-detail-view="false" data-detail-view-by-click="false" data-show-export="false" data-click-to-select="true" data-minimum-count-columns="2" data-show-pagination-switch="false" data-pagination="false" data-id-field="id" data-show-footer="false" data-mobile-responsive="true" data-row-style="DetailSatirStili" data-response-handler="responseHandler" data-pagination-parts="['pageSize', 'pageInfo', 'pageList']" data-locale="tr-TR"><thead><tr>
-                                        <th data-width="0" data-field="TARIH" data-halign="center" data-align="center" data-sortable="true">TARİH</th>
-                                        <th data-width="0" data-field="HAM_SERINO" data-halign="center" data-align="center" data-sortable="true">HAM SERINO</th>
-                                        <th data-width="0" data-field="HAM_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">HAM STOK KODU</th>
-                                        <th data-width="0" data-field="HAM_ADI" data-halign="center" data-align="center" data-sortable="true">HAM ADI</th>
-                                        <th data-width="0" data-field="HAM_DETAY" data-width="150" data-halign="center" data-align="center" data-sortable="true">HAM DETAY</th>
-                                        <th data-width="0" data-field="HAM_GENISLIK" data-halign="center" data-align="center" data-sortable="true">HAM GENISLIK</th>
-                                        <th data-width="0" data-field="HAM_KALINLIK" data-halign="center" data-align="center" data-sortable="true">HAM KALINLIK</th>
-                                        <th data-width="0" data-field="HAM_FIRMA_SERI" data-halign="center" data-align="center" data-sortable="true">HAM FIRMA SERI</th>
-                                        <th data-width="0" data-field="ACIKLAMA_4" data-halign="center" data-align="center" data-sortable="true">ACIKLAMA 4</th>
-                                        <th data-width="0" data-field="ACIKLAMA_5" data-halign="center" data-align="center" data-sortable="true">ACIKLAMA 5</th>
-                                        <th data-width="0" data-field="HAM_KALITE" data-halign="center" data-align="center" data-sortable="true">HAM KALITE</th>
-                                        <th data-width="0" data-field="HAM_KAP_KALINLIK" data-halign="center" data-align="center" data-sortable="true">HAM KAP KALINLIK</th>
-                                        <th data-width="0" data-field="HAM_MIKTAR" data-halign="center" data-align="center" data-sortable="true">HAM MIKTAR</th>
-                                        <th data-width="0" data-field="SIRA" data-halign="center" data-align="center" data-sortable="false">SIRA</th>
-                                        <th data-width="0" data-field="USTISEMRI" data-halign="center" data-align="center" data-sortable="true">USTISEMRI</th>
-                                        <th data-width="0" data-field="ALT_ISEMRI" data-halign="center" data-align="center" data-sortable="true">ALT İŞEMRİ</th>
-                                        <th data-width="0" data-field="URT_SERINO" data-halign="center" data-align="center" data-sortable="true">ÜRETİLECEK BARKOD NO</th>
-                                        <th data-width="0" data-field="URT_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">STOK KODU</th>
-                                        <th data-width="0" data-field="URT_STOK_ADI" data-halign="center" data-align="center" data-sortable="true">STOK ADI</th>
-                                        <th data-width="0" data-field="URT_GENISLIK" data-halign="center" data-align="center" data-sortable="true">GENİŞLİK</th>
-                                        <th data-width="0" data-field="IE_MIKTAR2" data-halign="center" data-align="center" data-sortable="true" data-formatter="MiktarFormatter">MİKTAR 2</th>
-                                        <th data-width="0" data-field="IE_MIKTAR" data-halign="center" data-align="center" data-sortable="true" data-formatter="MiktarFormatter">MİKTAR 1</th>
-                                        <th data-width="0" data-field="REFISEMRINO" data-halign="center" data-align="center" data-sortable="true">REFERANS İŞEMRİ NO</th>
-                                        <th data-width="0" data-field="REF_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">REF STOK KODU</th>
-                                        <th data-width="0" data-field="REF_STOK_ADI" data-halign="center" data-align="center" data-sortable="true">REF. İŞ EMRİ STOK ADI</th>
-                                        <th data-width="0" data-formatter="IsEmriDetayIslemFormatter" data-halign="center" data-align="center" data-sortable="false">İŞLEM</th>
-                                        </tr></thead></table></div></div>`);
+        
 
-
-
-
-
-            $(`#BekleyenIsEmirleri${index}DetailTable`).bootstrapTable({ data: MakineKoduIleDetayTabloFiltrele(row) });
-
-            MakineKoduIleDetaySutunFiltrele(index);
-        });
+        function DetailFormatter(index, row, $element) 
+        { 
+            alert(index);
+            return '';
+        }
 
         function MakineKoduIleIsEmriUstBilgiDuzenle()
         {
@@ -981,7 +952,7 @@
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('showColumn', 'HAM_SERINO');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'HAM_STOK_KODU');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'HAM_ADI');
-                    $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('showColumn', 'HAM_DETAY');
+                    $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'HAM_DETAY');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'HAM_GENISLIK');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'HAM_KALINLIK');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'HAM_FIRMA_SERI');
@@ -994,7 +965,7 @@
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('showColumn', 'ALT_ISEMRI');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'SIRA');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'URT_SERINO');
-                    $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('showColumn', 'URT_STOK_KODU');
+                    $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'URT_STOK_KODU');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('showColumn', 'URT_STOK_ADI');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'URT_GENISLIK');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('showColumn', 'IE_MIKTAR');
